--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipe Viewer with Collapsible Sections</title>
+  <title>Eve Online: Bill of Materials</title>
   <link rel="stylesheet" href="styles.css?v=1">
 </head>
 <body>
