Added pun, quantity updates recipe

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eve Online: Bill of Materials</title>
+  <title>Eve Online: Bill (Dingha) of Materials</title>
   <link rel="stylesheet" href="styles.css?v=20241104T1437">
 </head>
 <body>
 
-  <h1>Eve Online: Bill of Materials</h1>
+  <h1>Eve Online: Bill (Dingha) of Materials</h1>
 
   <div id="search-container">
     <input type="text" id="quantityInput" value="1">
